--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5c443f0d",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "def criar_grafico_comparativo_gap(caminho_csv='resultados_gurobi.csv'):\n",
+    "def criar_grafico_comparativo_gap(caminho_csv='resultados_gurobi.csv'): #adicione ao csv manualmente a estrategia de cada amostra e o n correspondente, conforme relatório\n",
     "    \"\"\"\n",
     "    Cria um único gráfico de linha comparando o gap de otimalidade das\n",
     "    diferentes estratégias conforme 'n' aumenta.\n",
